<resources>
    <string name="app_name">TestTaskForSHIFTLab</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_password_hint">Подтверждение пароля</string>
    <string name="btn_registration">Регистрация</string>
    <string name="birth_hint">Дата рождения</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="btn_hello">Приветствие</string>
    <string name="default_data">JAN 01 2024</string>
    <string name="error_input_name">Недопустимый формат: только латиница и кириллица</string>
    <string name="error_input_password">Минимум 5 символов</string>
    <string name="error_input_confirm_password">Пароли не совпадают</string>
    <string name="error_input_birth">Год рождения должен быть меньше 2010</string>
    <string name="modal_window">Окно приветствия!</string>
    <string name="hello_user">Приветствую Вас, %s!</string>
    <string name="close_modal_window">Привет</string>
    <string name="error_get_user">Ошибка при загрузке пользователя</string>
    <string name="unlogin">Выйти из аккаунта?</string>
    <string name="unlogin_desc">Вам придётся заново пройти регистрацию!</string>
    <string name="exit_modal_window">Выйти</string>
    <string name="cancel_modal_window">Отмена</string>
</resources>